client/src/router/pages/posts.css
.postlist-container {
  display: flex;
  flex-direction: column;
  gap: 20px;
  width: 100%;
}

h1 {
  font-weight: 600;
  font-size: 1.8rem;
}

h2 {
  font-weight: 400;
  font-size: 1.2rem;
}

.postlist-element-container {
  display: block;
  width: 100%;
  margin: 0 auto;
  padding: 20px 20px;
  color: white;
  background-color: rgb(32, 32, 32);
  text-decoration: none;
  border-radius: 10px;
}

.postlist-element-container:hover {
  background-color: rgb(24, 24, 24);
  cursor: pointer;
}

